Add contact information

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - CV/Resume</title>
+    <title>Lupasco Cristian - CV/Resume</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <h1>Lupasco Cristian</h1>
+    </header>
+
+    <section id="contact">
+      <h2>Contact Information</h2>
+      <ul>
+        <li><strong>Phone:</strong> <a href="tel:+37369384925">+373 69 384 925</a></li>
+        <li><strong>Email:</strong> <a href="mailto:lupascocr2004@gmail.com">lupascocr2004@gmail.com</a></li>
+        <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/cristian-lupasco" target="_blank">linkedin.com/in/cristian-lupasco</a></li>
+      </ul>
+    </section>
+  </body>
 </html>
