Add personal summary

--- a/index.html
+++ b/index.html
@@ -14,10 +14,46 @@
     <section id="contact">
       <h2>Contact Information</h2>
       <ul>
-        <li><strong>Phone:</strong> <a href="tel:+37369384925">+373 69 384 925</a></li>
-        <li><strong>Email:</strong> <a href="mailto:lupascocr2004@gmail.com">lupascocr2004@gmail.com</a></li>
+        <li><strong>Phone:</strong> <a href="tel:+37300000000">+373 00 000 000</a></li>
+        <li><strong>Email:</strong> <a href="mailto:cristianlupasco2004@gmail.com">cristianlupasco2004@gmail.com</a></li>
         <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/cristian-lupasco" target="_blank">linkedin.com/in/cristian-lupasco</a></li>
       </ul>
+    </section>
+
+    <section id="summary">
+      <h2>Summary</h2>
+      <p>
+        I am a highly adaptable and sociable individual who integrates seamlessly into new workplaces. 
+        I feel comfortable working in team environments and enjoy building professional relationships. 
+        I have medium knowledge of front-end and back-end development, with a strong interest in expanding my technical capabilities.
+      </p>
+    </section>
+
+    <section id="education">
+      <h2>Education</h2>
+      
+      <article>
+        <h3>Technical University of Moldova</h3>
+        <p><strong>Faculty of Computers, Informatics and Microelectronics</strong></p>
+        <p><em>Bachelor of Engineering in Software Engineering</em></p>
+        <p><time>2023 - Until now</time></p>
+          💭 <em>Favorite Memory:</em> The collaborative atmosphere in programming courses where we worked on 
+          team projects. I particularly enjoyed the Web Programming course where I learned to build full-stack 
+          applications and discovered my passion for both frontend and backend development.
+        </p>
+      </article>
+
+    </section>
+    <section id="work-experience">
+      <article>
+        <h3>EXAMEN.MD</h3>
+        <p><em>Math Teacher</em></p>
+        <p><time>12/2023 - 10/2025</time></p>
+          💭 <em>Work Experience:</em> Received 100+ Good reviews from students. It was incredibly rewarding 
+          to see students grasp difficult mathematical concepts and grow in confidence. This experience taught 
+          me patience and improved my ability to explain complex topics clearly.
+        </p>
+      </article>
     </section>
   </body>
 </html>
