Add skills section

--- a/index.html
+++ b/index.html
@@ -37,23 +37,116 @@
         <p><strong>Faculty of Computers, Informatics and Microelectronics</strong></p>
         <p><em>Bachelor of Engineering in Software Engineering</em></p>
         <p><time>2023 - Until now</time></p>
-          💭 <em>Favorite Memory:</em> The collaborative atmosphere in programming courses where we worked on 
+           <em>Favorite Memory:</em> The collaborative atmosphere in programming courses where we worked on 
           team projects. I particularly enjoyed the Web Programming course where I learned to build full-stack 
           applications and discovered my passion for both frontend and backend development.
         </p>
       </article>
 
     </section>
+
     <section id="work-experience">
+      <h2>Work Experience</h2>
+
       <article>
-        <h3>EXAMEN.MD</h3>
+        <h3>ROCMAN</h3>
+        <p><em>PHP Developer</em></p>
+        <p><time>10/2024 - Present</time></p>
+        <p>
+          During the internship I gained knowledge and experience working with PHP. The main focus was 
+          working around creating a platform for uploading/reviewing CV's instantly.
+        </p>
+      </article>
+
+      <article>
+        <h3>AMARIS</h3>
+        <p><em>React Native Intern</em></p>
+        <p><time>09/2025 - 10/2025</time></p>
+        <p>
+          Gained experience working with React Native creating cross-platform applications for both iOS and Android. 
+          Learned best UX practices and mobile development patterns.
+        </p>
+      </article>
+
+      <article>
+        <h3>EXAMEN MD</h3>
         <p><em>Math Teacher</em></p>
         <p><time>12/2023 - 10/2025</time></p>
-          💭 <em>Work Experience:</em> Received 100+ Good reviews from students. It was incredibly rewarding 
+        <p>
+          💭 Received 100+ Good reviews from students. It was incredibly rewarding 
           to see students grasp difficult mathematical concepts and grow in confidence. This experience taught 
           me patience and improved my ability to explain complex topics clearly.
         </p>
       </article>
     </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+
+      <article>
+        <h3>Winter FAF Hackathon</h3>
+        <p><time>12/2025</time></p>
+        <p>
+          Designed and implemented an architecture for an image detection system that analyzes scanned documents 
+          and identifies modifications using AI. Built the frontend with React and TypeScript supporting various 
+          file formats and text editors, while NodeJS and Python handled the backend with ML model integration.
+        </p>
+        <p><strong>Technologies:</strong> React, TypeScript, NodeJS, Python, ML, RESTful APIs, SO integration</p>
+      </article>
+
+      <article>
+        <h3>OCR Project - Winter FAF Hackathon</h3>
+        <p><time>12/2025</time></p>
+        <p>
+          Participated in developing an Optical Character Recognition (OCR) solution that extracts text from 
+          uploaded images. Utilized OpenCV for image processing with Gemini AI model integration for real-time 
+          text analysis and extraction.
+        </p>
+        <p><strong>Technologies:</strong> OpenCV, AI/ML, Image Processing, Python</p>
+      </article>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      
+      <div>
+        <h3>Technical Skills</h3>
+        <ul>
+          <li>PHP</li>
+          <li>React</li>
+          <li>HTML/CSS</li>
+          <li>Python</li>
+          <li>JavaScript</li>
+          <li>Git</li>
+        </ul>
+      </div>
+
+      <div>
+        <h3>Soft Skills</h3>
+        <ul>
+          <li>Adaptive</li>
+          <li>Problem-Solving</li>
+          <li>Great Speaker</li>
+          <li>Decision-Maker</li>
+          <li>Organized</li>
+          <li>Collaborative</li>
+          <li>Super friendly</li>
+          <li>Proactive</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="languages">
+      <h2>Languages</h2>
+      <ul>
+        <li><strong>Russian:</strong> Fluent</li>
+        <li><strong>English:</strong> Fluent</li>
+        <li><strong>Romanian:</strong> Fluent</li>
+      </ul>
+    </section>
+
+    <footer>
+      <p>&copy; 2026 Lupasco Cristian.</p>
+    </footer>
   </body>
 </html>
